Endpoint para obtener datos de contacto del padre a travez de un attendance